fix button wrapping to same line as description textarea

--- a/SalonML/SalonML/src/app/core/home/resume-header/resume-header.component.css
+++ b/SalonML/SalonML/src/app/core/home/resume-header/resume-header.component.css
@@ -21,10 +21,17 @@
 
 .large-input {
   width: 280px;
+  display: block;
 }
 
 @media screen and (min-width: 450px) {
   .large-input {
     width: 400px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .large-input {
+    width: 550px;
   }
 }
